--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
 
-    <script src="script.js"></script>
+    <link rel="style/css" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="scores">
+        <p id="playerScore">Player: 0</p>
+        <p id="computerScore">Computer: 0</p>
+    </div>
+
+    <div class="choices">
+        <button class="selection" data-choice="rock">Rock</button>
+        <button class="selection" data-choice="paper">Paper</button>
+        <button class="selection" data-choice="scissors">Scissors</button>
+    </div>
     
+    <div class="results"></div>
 </body>
 </html>
